syntax = "proto3";

package record;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

message Genesis {
    option (gogoproto.face) = true;

    int32 polymorph = 16;

    bytes Hash = 20;
}

message Child {
    option (gogoproto.face) = true;

    int32 polymorph = 16;

    bytes PrevChild = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes Ref = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
}

message Jet {
    option (gogoproto.face) = true;

    int32 polymorph = 16;
    // TODO
}

enum CallType {
    CTMethod = 0;
    CTSaveAsChild = 1;
    CTSaveAsDelegate = 2;

    CTGenesis = 3;
}

enum ReturnMode {
    // ReturnResult - return result as soon as it is ready
    ReturnResult = 0;

    // ReturnNoWait - call method and return without results
    ReturnNoWait = 1;

    // ReturnValidated (not yet) - return result only when it's validated
}

message IncomingRequest {
    option (gogoproto.face) = true;

    int32 polymorph = 16;
    CallType CallType = 20;
    bytes Caller = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes CallerPrototype = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    uint64 Nonce = 23;
    ReturnMode ReturnMode = 25;
    bool Immutable = 26;

    bytes Base = 27 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference"];
    bytes Object = 28 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference"];
    bytes Prototype = 29 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference"];

    string Method = 30;
    bytes Arguments = 31;
    bytes Sender = 32 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    string APIRequestID = 33;
    bytes Reason = 34 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
}

message OutgoingRequest {
    option (gogoproto.face) = true;

    int32 polymorph = 16;
    CallType CallType = 20;
    bytes Caller = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes CallerPrototype = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    uint64 Nonce = 23;
    ReturnMode ReturnMode = 25;
    bool Immutable = 26;

    bytes Base = 27 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference"];
    bytes Object = 28 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference"];
    bytes Prototype = 29 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference"];

    string Method = 30;
    bytes Arguments = 31;
    bytes Sender = 32 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    string APIRequestID = 33;
    bytes Reason = 34 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
}

message Result {
    option (gogoproto.face) = true;

    int32 polymorph = 16;

    bytes Object = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes Request = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Payload = 22;
}

message Type {
    option (gogoproto.face) = true;

    int32 polymorph = 16;

    bytes Domain = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Request = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes TypeDeclaration = 22;
}

message Code {
    option (gogoproto.face) = true;

    int32 polymorph = 16;

    bytes Domain = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Request = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Code = 22;
    uint32 MachineType = 23 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.MachineType", (gogoproto.nullable) = false];
}

message Activate {
    int32 polymorph = 16;

    bytes Domain = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Request = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Memory = 22;
    bytes Image = 23 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool IsPrototype = 24;
    bytes Parent = 25 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool IsDelegate = 26;
}

message Amend {
    int32 polymorph = 16;

    bytes Domain = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Request = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Memory = 22;
    bytes Image = 23 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool IsPrototype = 24;
    bytes PrevState = 25 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
}

message Deactivate {
    int32 polymorph = 16;

    bytes Domain = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Request = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes PrevState = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
}

message PendingFilament {
    int32 polymorph = 16;

    bytes RecordID = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes PreviousRecord = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = true];
}


message Virtual {
    int32 polymorph = 16;

    oneof union {
        Genesis Genesis = 101;
        Child Child = 102;
        Jet Jet = 103;
        IncomingRequest IncomingRequest = 104;
        OutgoingRequest OutgoingRequest = 105;
        Result Result = 106;
        Type Type = 107;
        Code Code = 108;
        Activate Activate = 109;
        Amend Amend = 110;
        Deactivate Deactivate = 111;
        PendingFilament PendingFilament = 112;
    }

    bytes Signature = 200;
}

message Material {
    int32 polymorph = 16;

    Virtual Virtual = 20;
    bytes JetID = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.JetID", (gogoproto.nullable) = false];

    bytes Signature = 200;
}

message CompositeFilamentRecord {
    int32 polymorph = 16;

    bytes RecordID = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    Material Record = 21 [(gogoproto.nullable) = false];

    bytes MetaID = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    Material Meta = 23 [(gogoproto.nullable) = false];
}
